--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="text_default">16sp</dimen>
     <dimen name="padding_default">16dp</dimen>
     <dimen name="elevation_small">4dp</dimen>
+    <dimen name="padding_small">8dp</dimen>
 </resources>
