--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,15 @@
         <item name="tint">@android:color/white</item>
     </style>
 
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
+    <style name="SwitchCompatTheme" >
+        <item name="thumbTint">@color/switch_selector</item>
+        <item name="trackTint">@color/switch_track_selector</item>
+    </style>
+
 </resources>
