--- a/app/src/main/res/layout/activity_add_new_reminder.xml
+++ b/app/src/main/res/layout/activity_add_new_reminder.xml
@@ -91,11 +91,64 @@
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch_push_notification_reminder"
+                style="@style/SwitchCompatTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/SwitchCompatTheme"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_remind_me_on_time" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_priority_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_default"
+                android:hint="@string/priority_label"
+                android:textColorHint="@android:color/darker_gray"
+                android:textSize="@dimen/text_default"
+                app:layout_constraintTop_toBottomOf="@id/switch_push_notification_reminder" />
+
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_default"
+                app:layout_constraintTop_toBottomOf="@id/tv_priority_label">
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/cb_priority_low"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/priority_low_checkbox"
+                    android:button="@null"
+                    android:checked="true"
+                    android:text="@string/priority_low"
+                    android:textAlignment="center" />
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/cb_priority_medium"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="@dimen/margin_default"
+                    android:layout_marginEnd="@dimen/margin_default"
+                    android:layout_weight="1"
+                    android:background="@drawable/priority_medium_checkbox"
+                    android:button="@null"
+                    android:text="@string/priority_medium"
+                    android:textAlignment="center" />
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/cb_priority_high"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/priority_high_checkbox"
+                    android:button="@null"
+                    android:text="@string/priority_high"
+                    android:textAlignment="center" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
