--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="padding_default">16dp</dimen>
     <dimen name="elevation_small">4dp</dimen>
     <dimen name="padding_small">8dp</dimen>
+    <dimen name="corners_radius_small">12dp</dimen>
 </resources>
