--- a/app/src/main/res/layout/activity_add_new_reminder.xml
+++ b/app/src/main/res/layout/activity_add_new_reminder.xml
@@ -114,7 +114,7 @@
                 android:layout_marginTop="@dimen/margin_default"
                 app:layout_constraintTop_toBottomOf="@id/tv_priority_label">
 
-                <com.google.android.material.checkbox.MaterialCheckBox
+                <androidx.appcompat.widget.AppCompatRadioButton
                     android:id="@+id/cb_priority_low"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
@@ -125,7 +125,7 @@
                     android:text="@string/priority_low"
                     android:textAlignment="center" />
 
-                <com.google.android.material.checkbox.MaterialCheckBox
+                <androidx.appcompat.widget.AppCompatRadioButton
                     android:id="@+id/cb_priority_medium"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
@@ -137,7 +137,7 @@
                     android:text="@string/priority_medium"
                     android:textAlignment="center" />
 
-                <com.google.android.material.checkbox.MaterialCheckBox
+                <androidx.appcompat.widget.AppCompatRadioButton
                     android:id="@+id/cb_priority_high"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
