--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="elevation_small">4dp</dimen>
     <dimen name="padding_small">8dp</dimen>
     <dimen name="corners_radius_small">12dp</dimen>
+    <dimen name="margin_large">24dp</dimen>
+    <dimen name="padding_large">24dp</dimen>
 </resources>
