Feature added # Update added # Delete added
Next
# Add checks for date and time - mark all that deadline is in past

--- a/app/src/main/res/layout/bottom_sheet_drawer.xml
+++ b/app/src/main/res/layout/bottom_sheet_drawer.xml
@@ -46,7 +46,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
-        android:background="@drawable/ic_action_add"
+        android:src="@drawable/ic_account"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView" />
 
